fixed responsive on mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,5 @@
+
+
 html, body {
   margin: 0;
   padding: 0;
@@ -13,6 +15,7 @@ a {
 
 body {
   background-color: #e8f1f2;
+  width: 100%;
 }
 
 /****
@@ -22,7 +25,8 @@ Landing Section
 .landing {
   background-position: 0 0;
   background-size: cover;
-  min-height: 1000px;
+  min-height: 100vh;
+  width: 100%;
   height: 100vh;
   z-index: 100;
   text-align: center;
@@ -30,17 +34,14 @@ Landing Section
 
 .landing-image {
   display: block;
-  float:left;
-  clear: both;
   min-height: 1000px;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
-  background: url("../img/churchwide.jpg") no-repeat center center fixed;
+  background: url("../img/sunset.jpeg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  filter:blur(2.5px);
   position: fixed;
   z-index: -1;
 }
@@ -73,11 +74,12 @@ Navigation bar
 
 .navbar {
   height: 100%;
-  width: 100vw;
-  margin: 0 auto;
+  width: 100%;
   display: none;
+  margin: 0 auto;
   background-color: black;
   width: 85vw;
+
 }
 
 
@@ -125,10 +127,15 @@ Navigation bar
 .nav-item {
   background-color: #e8f1f2;
   margin: 0;
-  height: 50px;
+  height: 70px;
   width: 100%;
   position: relative;
   z-index: 500;
+}
+
+.nav-item:hover {
+  background-color: lightblue;
+  transition: 0.4s;
 }
 
 .nav-item a {
@@ -136,7 +143,7 @@ Navigation bar
   font-size: 20px;
   font-family: 'Roboto', sans-serif;
   width: 100%;
-  line-height:50px;
+  line-height:70px;
   display: inline-block;
   white-space: nowrap;
 }
@@ -222,11 +229,14 @@ Front Page
 /*****
 Basic Section Styling
 *****/
+
 .color-back {
   min-height: 800px;
   font-size: 35px;
+  width: 100%;
   padding-top: 1px;
   padding-bottom: 25px;
+  position: relative;
   display: flex;
   color: #001a23;
   background-color: #f9f2ec;
@@ -236,6 +246,7 @@ Basic Section Styling
 
 .img-back {
   display: flex;
+  width: 100%;
   background-position: 0 0;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -337,13 +348,14 @@ Service Times
 }
 
 .top-cut {
-  float:right;
-  margin: 30px 0 10px 0 ;
+  text-align: right;
+  position: absolute;
+  width: 80%;
+  bottom: 0;
+  height: 20px;
+  margin: 30px 0 30px 0 ;
 }
 
-#services .img-container .top-cut {
-  align-self: flex-end;
-}
 
 .info-block {
   width: 80%;
@@ -427,7 +439,7 @@ Staff
 .staff-photo img {
   display: block;
   margin: auto;
-  width:80%;
+  max-height: 70vh;
   max-width: 300px;
   min-width: 200px;
   border-radius: 15px;
@@ -463,6 +475,7 @@ Location
 #location {
   background: url("../img/street.jpeg");
   background-attachment: fixed;
+  display: flex;
 }
 
 #map {
@@ -475,6 +488,7 @@ Location
 
 .address {
   text-align: center;
+  padding-bottom: 30px;
 }
 
 
@@ -483,11 +497,9 @@ Footer
 *****/
 .footer {
   background-color: #001a23;
-  height: 100px;
   color: #e8f1f2;
-  position: relative;
-  margin-top: -100px;
-  clear: both;
+  position: absolute;
+  width: 100%;
   text-align: center;
 }
 
@@ -582,11 +594,37 @@ Newsletter sign up modal
   text-align: center;
 }
 
+/*****
+Calendar
+*******/
+
+.calendar-container {
+  height: 400px;
+  width: 80vw;
+}
 
 
 /****
 MEDIA QUERIES
 ***/
+@media only screen
+and (orientation: landscape){
+  .landing-image {
+    display: block;
+    min-height: 1000px;
+    width: 100%;
+    height: 100vh;
+    background: url("../img/churchwide.jpg") no-repeat center center fixed;
+    filter: blur(2.5px);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    position: fixed;
+    z-index: -1;
+  }
+}
+
 @media screen and (min-width: 640px) {
   /****
   Landing/top section
@@ -608,7 +646,7 @@ MEDIA QUERIES
   }
 
   #logo {
-    max-height: 80px;
+    max-height: 50px;
     display: inline-block;
     float: left;
   }
@@ -642,6 +680,7 @@ MEDIA QUERIES
 
   .nav-item:hover{
     background-color: gray;
+    transition: 0.4s;
   }
 
 
@@ -659,18 +698,20 @@ MEDIA QUERIES
   Welcome section Text
   ***/
 
+
+
+
   .welcomeText{
     flex-direction: row;
-    margin-top: 350px;
+    margin-top: 95px;
 
     }
 
     .welcome {
-      height: 650px;
+      height: 78vh;
     }
 
   .welcomeTextBlur {
-    margin-top: 175px;
     height: 55px;
     width: 558px;
   }
@@ -749,6 +790,8 @@ MEDIA QUERIES
   /****
   Welcome section Text
   ***/
+
+
   .welcome {
     height: 775px;
   }
